# Abbes

./: .gitignore
firmware/: platformio.ini
firmware/include/: joint_definitions.h  microros_transport.h  mpu6050_raw.h  robot_config.h  servo_controller.h
firmware/src/: main.cpp  microros_transport.cpp  mpu6050_raw.cpp  servo_controller.cpp
ros2_ws/src/humanoid_robot/: CMakeLists.txt  package.xml
ros2_ws/src/humanoid_robot/config/: balance_params.yaml  gait_params.yaml  imu_params.yaml  robot_params.yaml
ros2_ws/src/humanoid_robot/launch/: balance.launch.py
ros2_ws/src/humanoid_robot/src/: balance_controller.cpp  imu_filter.cpp
